--- a/Green_S9_Group_project/src/assets/i18n/ta.json
+++ b/Green_S9_Group_project/src/assets/i18n/ta.json
@@ -26,7 +26,15 @@
       "Maximum_Temp": "அதிகபட்ச வெப்பநிலை",
       "Minimun_Temp": "குறைந்தபட்சம் வெப்பநிலை",
       "Humidity": "ஈரப்பதம்",
-      "Wind_Speed": "காற்றின் வேகம்"
+      "Wind_Speed": "காற்றின் வேகம்",
+      "Crops":{
+        "Onion": "வெங்காயம்",
+        "Carrot": "கேரட்",
+        "Ginger": "இஞ்சி",
+        "Pottato": "உருளைக்கிழங்கு",
+        "Turmeric": "மஞ்சள்",
+        "Paddy": "நெல்"
+      }
     }
   }
 }
