--- a/Green_S9_Group_project/src/assets/i18n/ta.json
+++ b/Green_S9_Group_project/src/assets/i18n/ta.json
@@ -27,13 +27,50 @@
       "Minimun_Temp": "குறைந்தபட்சம் வெப்பநிலை",
       "Humidity": "ஈரப்பதம்",
       "Wind_Speed": "காற்றின் வேகம்",
-      "Crops":{
+      "Crops": {
         "Onion": "வெங்காயம்",
         "Carrot": "கேரட்",
         "Ginger": "இஞ்சி",
         "Pottato": "உருளைக்கிழங்கு",
         "Turmeric": "மஞ்சள்",
         "Paddy": "நெல்"
+      }
+    },
+    "CropCultivation": {
+      "title": "பயிர் சாகுபடி",
+      "Fertilizer_Calculator": "உர கணிப்பபொறி",
+      "Crop_Tips": "பயிர் குறிப்புகள்",
+      "Diseases": "நோய்கள்",
+      "Animal_Intervention": "விலங்கு தலையீடு"
+    },
+    "CropTips": {
+      "title": {
+        "Onion": "வெங்காயக் குறிப்புகள்",
+        "Carrot": "கேரட் குறிப்புகள்",
+        "Ginger": "இஞ்சி குறிப்புகள்",
+        "Pottato": "உருளைக்கிழங்கு குறிப்புகள்",
+        "Turmeric": "மஞ்சள் குறிப்புகள்",
+        "Paddy": "நெல் குறிப்புகள்"
+      }
+    },
+    "CropDiseases": {
+      "title": {
+        "Onion": "வெங்காயக் நோய்கள்",
+        "Carrot": "கேரட் நோய்கள்",
+        "Ginger": "இஞ்சி நோய்கள்",
+        "Pottato": "உருளைக்கிழங்கு நோய்கள்",
+        "Turmeric": "மஞ்சள் நோய்கள்",
+        "Paddy": "நெல் நோய்கள்"
+      },
+      "Remedy": "பரிகாரம்",
+      "About": "பற்றி",
+      "DiseaseName": {
+        "DampingOff": "டேம்பிங்ஆஃப்",
+        "WhiteRot": "வெள்ளை அழுகல்",
+        "PinkRootRot": "இளஞ்சிவப்பு வேர் அழுகல்",
+        "BlackMould": "கருப்பு அச்சு",
+        "DownyMildew": "பூஞ்சை காளான்",
+        "GreenMould": "பச்சை அச்சு"
       }
     }
   }
