translated cropcultivation and home page

--- a/Green_S9_Group_project/src/assets/i18n/en.json
+++ b/Green_S9_Group_project/src/assets/i18n/en.json
@@ -41,7 +41,8 @@
       "Fertilizer_Calculator": "Fertilizer Calculator",
       "Crop_Tips": "Crop Tips",
       "Diseases": "Diseases",
-      "Animal_Intervention": "Animal Intervention"
+      "Animal":"Animal",
+      "Intervention": "Intervention"
     },
     "CropTips": {
       "title": {
