--- a/Green_S9_Group_project/src/assets/i18n/en.json
+++ b/Green_S9_Group_project/src/assets/i18n/en.json
@@ -71,7 +71,23 @@
         "PinkRootRot": "Pink Root Rot",
         "BlackMould": "Black Mould",
         "DownyMildew": "Downy Mildew",
-        "GreenMould": "Green Mould"
+        "GreenMould": "Green Mould",
+        "RhizomeRot":"RhizomeRot",
+        "LeafSpot":"Leaf Spot",
+        "LeafBlotch":"Leaf Blotch",
+        "DryRot":"Dry Rot",
+        "Dryrot":"Dry rot",
+        "Rhizomerot/Softrot/Pythiumrot":"Rhizomerot/Softrot/Pythiumrot",
+        "Bakanae":"Bakanae",
+        "Narrowleafspot(Cercosporaleafspot)":"Narrowleafspot(Cercosporaleafspot)",
+        "Riceblast":"Rice Blast",
+        "Sheathblight":"Sheath Blight",
+        "Stemrot":"Stem Rot",
+        "Alternarialeafblight":"Alternaria Leaf Blight",
+        "Cercosporaleafblight":"Cercospora Leaf Blight",
+        "Cottonyrot(Sclerotiniarot)":"Cottonyrot(Sclerotiniarot)",
+        "Blackscurf&Rhizoctoniacanker":"Black scurf Rhizoctonia canker",
+        "PotatoEarlyBlight":"Potato Early Blight"
       }
     },
     "Fertilizer_Calculator": {
