--- a/Green_S9_Group_project/src/assets/i18n/ta.json
+++ b/Green_S9_Group_project/src/assets/i18n/ta.json
@@ -71,7 +71,25 @@
         "PinkRootRot": "இளஞ்சிவப்பு வேர் அழுகல்",
         "BlackMould": "கருப்பு அச்சு",
         "DownyMildew": "பூஞ்சை காளான்",
-        "GreenMould": "பச்சை அச்சு"
+        "GreenMould": "பச்சை அச்சு",
+        "RhizomeRot":"ரைசோம் ரோட்",
+        "LeafSpot":"இலைப்புள்ளி",
+        "LeafBlotch":"இலை கறை",
+        "DryRot":"உலர் அழுகல்",
+        "Dryrot":"உலர் அழுகல்",
+        "Rhizomerot/Softrot/Pythiumrot":"வேர்த்தண்டுக்கிழங்கு அழுகல்/மென்மையான அழுகல்/பைத்தியம் அழுகல்",
+        "Bakanae":"பகானே",
+        "Narrowleafspot(Cercosporaleafspot)":"நெரோலீஃப்ஸ்பாட்(செர்கோஸ்போரல்ஸ்பாட்)",
+        "Riceblast":"அரிசி குண்டு",
+        "Sheathblight":"உறை ப்ளைட்",
+        "Stemrot":"தண்டு அழுகல்",
+        "Alternarialeafblight":"ஆல்டர்னேரியா இலை கருகல் நோய்",
+        "Cercosporaleafblight":"செர்கோஸ்போரா இலை கருகல் நோய்",
+        "Cottonyrot(Sclerotiniarot)":"காட்டோனிரோட்(ஸ்க்லெரோட்டினியாரோட்)",
+        "Blackscurf&Rhizoctoniacanker":"கருப்பு ஸ்கர்ஃப் ரைசோக்டோனியா கேன்கர்",
+        "PotatoEarlyBlight":"உருளைக்கிழங்கு ஆரம்பகால ப்ளைட்"
+
+
       }
     },
     "Fertilizer_Calculator": {
