--- a/Green_S9_Group_project/src/assets/i18n/en.json
+++ b/Green_S9_Group_project/src/assets/i18n/en.json
@@ -66,28 +66,28 @@
       "Remedy": "Remedy",
       "About": "About",
       "DiseaseName": {
-        "DampingOff": "Damping Off",
-        "WhiteRot": "White Rot",
-        "PinkRootRot": "Pink Root Rot",
-        "BlackMould": "Black Mould",
-        "DownyMildew": "Downy Mildew",
-        "GreenMould": "Green Mould",
-        "RhizomeRot":"RhizomeRot",
-        "LeafSpot":"Leaf Spot",
-        "LeafBlotch":"Leaf Blotch",
-        "DryRot":"Dry Rot",
-        "Dryrot":"Dry rot",
-        "Rhizomerot/Softrot/Pythiumrot":"Rhizomerot/Softrot/Pythiumrot",
+        "Damping Off": "Damping Off",
+        "White Rot": "White Rot",
+        "Pink Root Rot": "Pink Root Rot",
+        "Black Mould": "Black Mould",
+        "Downy Mildew": "Downy Mildew",
+        "Green Mould": "Green Mould",
+        "Rhizome Rot":"Rhizome Rot",
+        "Leaf Spot":"Leaf Spot",
+        "Leaf Blotch":"Leaf Blotch",
+        "Dry Rot":"Dry Rot",
+        "Dryrot":"Dryrot",
+        "Rhizomerot/Softrot/Pythiumrot":"Rhizomerot /Softrot /Pythiumrot",
         "Bakanae":"Bakanae",
-        "Narrowleafspot(Cercosporaleafspot)":"Narrowleafspot(Cercosporaleafspot)",
-        "Riceblast":"Rice Blast",
-        "Sheathblight":"Sheath Blight",
+        "Narrow Leaf Spot":"Narrow Leaf Spot",
+        "Rice Blast":"Rice Blast",
+        "Sheath Blight":"Sheath Blight",
         "Stemrot":"Stem Rot",
-        "Alternarialeafblight":"Alternaria Leaf Blight",
-        "Cercosporaleafblight":"Cercospora Leaf Blight",
-        "Cottonyrot(Sclerotiniarot)":"Cottonyrot(Sclerotiniarot)",
-        "Blackscurf&Rhizoctoniacanker":"Black scurf Rhizoctonia canker",
-        "PotatoEarlyBlight":"Potato Early Blight"
+        "Alternaria Leaf Blight":"Alternaria Leaf Blight",
+        "Cercospora Leaf Blight":"Cercospora Leaf Blight",
+        "Cottonyrot (Sclerotiniarot)":"Cottonyrot (Sclerotiniarot)",
+        "Blackscurf & Rhizoctoniacanker":"Blackscurf & Rhizoctoniacanker",
+        "Potato Early Blight":"Potato Early Blight"
       }
     },
     "Fertilizer_Calculator": {
